kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-s3
  namespace: cms
  labels:
    app: nest-s3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-s3
  template:
    metadata:
      labels:
        app: nest-s3
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: nest-s3
          image: nest-s3:${IMAGE_TAG}
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nest-s3
  namespace: cms
spec:
  type: ClusterIP
  selector:
    app: nest-s3
  ports:
    - port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-s3-ingress
  namespace: cms
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: nest.jonfjz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nest-s3
                port:
                  number: 80
